--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
+    "react-art": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-native-web": "^0.17.5",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
@@ -34,5 +37,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "node-sass": "^6.0.1",
+    "react-native": "^0.66.3",
+    "react-native-yamap": "^4.0.2",
+    "typescript": "^4.5.2"
   }
 }
